syntax = "proto3";
package goraft;

option go_package = "rpc";

service GoRaft {
	rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message AppendEntriesRequest {
	uint32 term = 1;
	string leaderId = 2;
	uint32 prevLogIndex = 3;
	uint32 prevLogTerm = 4;

	message Entry {
		string key = 1;
		string value = 2;
	}

	repeated Entry entries = 5;
	uint32 leaderCommit = 6;
}

message AppendEntriesResponse {
	uint32 term = 1;
	bool success = 2;
}
